--- a/ready-go.html
+++ b/ready-go.html
@@ -18,6 +18,7 @@
 			<img id='third_img' src="gray.png" width='120' height = '120'>
 		</div>
 		<p class="message">hello</p>
+		<p class="message">hello</p>
 		
 		
 		
